src/test/ui/error-codes/E0389.stderr
error[E0389]: cannot assign to data in a `&` reference
  --> $DIR/E0389.rs:18:5
   |
LL |     fancy_ref.num = 6; //~ ERROR E0389
   |     ^^^^^^^^^^^^^^^^^ assignment into an immutable reference

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0389"
